Abhinav | nav style fix on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1445,6 +1445,16 @@ li:hover > .dropdown {
 .nav-stroke li a:hover:after {
   width: 100%; }
 
+@media all and (max-width: 768px) {
+  .nav-stroke li a {
+    padding: 15px !important; }
+  .nav-stroke li a.active:after,
+  .nav-stroke li a:hover:after {
+    width: 100%;
+    bottom: 0; }
+  bottom: 0;
+  padding: 10px; }
+
 nav.fill li a {
   transition: all 2s; }
 
